# githubwzrd

./: .gitignore  Jakefile  LICENSE  README.md  generate-aws-creds.sh  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
api/: .gitignore  .prettierrc  index.js  package.json  pyproject.toml  tsconfig.json
api/config/: passport.js  vars.js
api/controllers/: hello.controller.js  repo.controller.js
api/errors/: extandable-error.js
api/middlewares/: error.js
api/routes/: hello.route.js  index.js  repo.route.js
api/scripts/: generate-aws-creds.sh
api/src/: app.ts  index.js  index.ts  server.js  server.ts
api/src/api/controllers/: hello.controller.js
api/src/api/middlewares/: auth.js
api/src/api/routes/v1/: hello.route.js  index.js
api/src/config/: aws.js  aws.ts  express.js  github-graphql-client.js  github-graphql-client.ts  handler.ts  logger.ts  passport.js  passport.ts  vars.js  vars.ts
api/src/controllers/: pulls.controller.ts  repo.controller.js  repo.controller.ts  user.controller.js  user.controller.ts
api/src/db/: User.ts
api/src/errors/: APIError.ts  ExtendableError.ts  RequestValidationError.ts
api/src/middlewares/: auth.ts  error.ts  response.ts  validator.ts
api/src/models/: AppRequest.ts  CurrentUser.ts
api/src/models/repo/: UserRepos.ts
api/src/routes/: index.js  index.ts  pulls.route.ts  repo.route.js  repo.route.ts  user.route.js  user.route.ts
api/src/types/: index.d.ts
client/: .babelrc  .codeclimate.yml  .eslintrc  .gitignore  .stylelintrc  .travis.yml  README.md  babel.config.json  (+8 more)
(+304 files in other folders)
